--- a/style/editUser.scss
+++ b/style/editUser.scss
@@ -8,6 +8,7 @@
     background-color: white;
     //transition:all 6.5s;
     overflow: hidden;
+    position: relative;
 	h2{
 		margin: 10px 0;
 	    font-weight: 300;
@@ -29,5 +30,20 @@
 		padding: 8px;
 		background-color: #40a010;
 		margin-right: 10px;
+	}
+
+	.dropdown-parent{
+		position: absolute;
+		top: 10px;
+		right: 10px;
+	}
+	.blocked-label{
+		position: absolute;
+		top: 0px;
+		left: 0px;
+		padding: 3px 6px;
+		background: #f34b4b;
+		color: white;
+		font-size: .8rem;
 	}
 }
