--- a/style/labeledInput.scss
+++ b/style/labeledInput.scss
@@ -24,6 +24,7 @@
 	}
 
 	.input-div{
+		position: relative;
 		input{
 			font-size: 1rem;
 			border: none;
@@ -35,7 +36,7 @@
 		span{
 			position: absolute;
 		    left: 0;
-		    bottom: -4px;
+		    top: 100%;
 		    font-size: 0.7rem;
 		    color: red;
 		}
