--- a/style/roleSelection.scss
+++ b/style/roleSelection.scss
@@ -1,5 +1,9 @@
 @import './base.scss';
 @import './main.scss';
 
-
-
+.roles-selection{
+	border: 1px solid #c3c3c3;
+    border-radius: 5px;
+    text-align: left;
+    padding: 5px;
+}
