--- a/style/main.scss
+++ b/style/main.scss
@@ -1,58 +1,53 @@
-html,body,#mainContainer{
-	width: 100%;
-	height: 100%;
-	margin: 0;
-	font-family:'Roboto';
-	font-size: 15px;
-}
-
-.full-vw-div{
-	width: 100vw;
-	height: 100vh;
-}
-
-.wh-center-aligned{
-	position: absolute;
-	top:50%;
-	left:50%;
-	@include transform(translate(-50%,-50%));
-}
-
-.w-center-aligned{
-	display:block;
-	margin:0 auto;
-}
+@import './base.scss';
 
 .hide{
 	display: none;
 }
 
-.button{
-	outline: none;
-    cursor: pointer;
+.tag-input{
+	display: inline-block;
+    padding: 5px 20px 5px 5px;
+    border: 1px solid #c3c3c3;
+    .add-new-tag{
+    	padding: 5px 10px;
+	    border: none;
+	    outline: none;
+	}
+	.add-label-span{
+		margin-left: -20px;
+	}
 }
 
-.green-button{
-	background-color: #40a010;
-	color: white;
+.tag{
+	padding: 5px 20px 5px 10px;
+	background-color: mediumseagreen;
+	border-radius: 4px;
+	display: inline-block;
+	margin:2px;
+	position: relative;
+
+	.close-cross{
+		position: absolute;
+	    width: 11px;
+	    height: 11px;
+	    transform: rotate(45deg);
+	    right: 3px;
+	    top: 9px;
+	    cursor: pointer;
+		.line1{
+			position: absolute;
+		    width: 11px;
+		    height: 1px;
+		    background: #000;
+		    top: 5px;
+		}
+		.line2{
+			width: 1px;
+		    position: absolute;
+		    height: 11px;
+		    background: #000;
+		    left: 5px;
+		}
+	}
 }
 
-.gray-button{
-	background-color: #c3c3c3;
-	color: black;
-}
-
-.red-button{
-	background-color: #a53d3d;
-	color: white;
-}
-
-.violet-button{
-	background: #5349b3;
-	color: white;
-}
-
-.buttons-div{
-	text-align: right;
-	padding: 10px 0;
-}
