--- a/style/main.scss
+++ b/style/main.scss
@@ -8,14 +8,19 @@
 	display: inline-block;
     padding: 5px 20px 5px 5px;
     border: 1px solid #c3c3c3;
-    .add-new-tag{
-    	padding: 5px 10px;
-	    border: none;
-	    outline: none;
-	}
-	.add-label-span{
-		margin-left: -20px;
-	}
+    .add-tag-wrapper{
+    	display: inline-block;
+    	padding: 7px 5px 7px 5px;
+    	.add-new-tag{
+	    	//padding: 5px 10px;
+		    border: none;
+		    outline: none;
+		    margin-left: 5px;
+		}
+		.add-label-span{
+			margin-left: -20px;
+		}
+    }
 }
 
 .tag{
